# live-transcript-worker

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: python-deploy.yml  python-dev-deploy.yml  python-test.yml
config/: example.yaml
docker/: cleanup.sh  start.sh  update.sh
live_transcript_worker/: config.py  custom_types.py  helper.py  process_audio.py  status_reporter.py  storage.py  stream_watcher.py  worker.py  worker_abstract.py  worker_buffered.py  worker_dash.py  worker_fixedbitrate.py  worker_live_segment.py  worker_sabr.py  worker_twitch_lfs.py
scripts/: build.sh  check.sh  ci-build.sh  format.sh  lint.sh  local-build.sh  run.sh  setup.sh  test.sh  update.sh
src/live_transcript_worker/: config.py  custom_types.py  helper.py  process_audio.py  status_reporter.py  storage.py  stream_watcher.py  types.py  worker.py  worker_abstract.py  worker_buffered.py  worker_dash.py  worker_fixedbitrate.py
tests/: conftest.py  test_config.py  test_helper.py  test_process_audio.py  test_storage.py  test_stream_watcher.py  test_whisper_real.py  test_worker.py  test_worker_abstract.py  test_worker_buffered.py  test_worker_dash.py  test_worker_fixedbitrate.py  test_worker_live_segment.py  test_worker_twitch_lfs.py
