[project]
name = "live-transcript-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "yt-dlp[default,curl-cffi]>=2026.3.17",
]

[dependency-groups]
dev = [
    "pyrefly>=0.62.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
target-version = "py312"
line-length = 140
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# ignoring E501 disables line length check for ruff since we are using a formatter.
ignore = ["E501"]
# Allow fix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
python-version = "3.12"
project-includes = ["live_transcript_worker", "main.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["live_transcript_worker"]
